ideas about useCases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#142F45",
         "titleBar.activeBackground": "#1C4261",
         "titleBar.activeForeground": "#F9FCFD"
-    }
+    },
+    "editor.formatOnSave": true
 }
