trying new ideas

--- a/CleanArch.Infra/CleanArch.Infra.csproj
+++ b/CleanArch.Infra/CleanArch.Infra.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Domain\CleanArch.Domain.csproj" />
+    <ProjectReference Include="..\CleanArch.Data\CleanArch.Data.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
