--- a/CleanArch.Api/appsettings.json
+++ b/CleanArch.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Data Source=DESKTOP-P19PAS6\\SQLEXPRESS01;Initial Catalog=sistema_alerta_bkp;Integrated Security=True;multipleactiveresultsets=True"
+  }
 }
