--- a/CleanArch.Infra/CleanArch.Infra.csproj
+++ b/CleanArch.Infra/CleanArch.Infra.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\CleanArch.Data\CleanArch.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
