refactorings, renaming files

--- a/CleanArch.Api/appsettings.Development.json
+++ b/CleanArch.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Data Source=DESKTOP-P19PAS6\\SQLEXPRESS01;Initial Catalog=sistema_alerta_bkp;Integrated Security=True;multipleactiveresultsets=True"
   }
 }
