--- a/CleanArch.Infra/CleanArch.Infra.csproj
+++ b/CleanArch.Infra/CleanArch.Infra.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
